<resources>
    <string name="app_name">SMS</string>
    <string name="spaceship_management_system">Spaceship Management System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="color_hint">Select a color</string>
    <string name="mass_hint">Enter the mass</string>
    <string name="location_hint">Enter the location</string>
    <string name="cancel">CANCEL</string>
    <string name="OK">OK</string>
</resources>